<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9CCE">

    <TextView
        android:id="@+id/checkCarTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkCarText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />


    <ImageView
        android:id="@+id/bgCar"
        android:layout_width="173dp"
        android:layout_height="131dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/carimg"
        app:srcCompat="@drawable/pngwing_com" />


    <EditText
        android:id="@+id/checkBrandEx"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="397dp"
        android:background="@color/white"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="15sp"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/checkBrandTxt"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="408dp"
        android:text="@string/brandText"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="VisualLintOverlap" />

    <EditText
        android:id="@+id/checkModelEx"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="325dp"
        android:background="@color/white"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="15sp"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/checkPriceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="250dp"
        android:textColor="@color/black"
        android:backgroundTint="#FF69B4"
        android:text="@string/checkPriceButton" />

    <TextView
        android:id="@+id/carPriceText"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="178dp"
        android:text="@string/priceText"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <EditText
        android:id="@+id/checkPriceEx"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="166dp"
        android:background="@color/white"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="15sp"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/carModelTxt"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="338dp"
        android:text="@string/modelText"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />


</RelativeLayout>