<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9CCE">


    <TextView
        android:id="@+id/addCarTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addCarText"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <ImageView
        android:id="@+id/bgCar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/carimg"
        app:srcCompat="@drawable/pngwing_com" />

    <LinearLayout
        android:id="@+id/brandLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bgCar"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/addBrandText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/brandText"
            android:textSize="15sp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/addBrand"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:inputType="text"
            android:background="@color/white"
            android:autofillHints=""
            tools:ignore="LabelFor"
            android:padding="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/modelLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/brandLayout"
        android:gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/addModelText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/modelText"
            android:textSize="15sp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/addModel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:inputType="text"
            android:background="@color/white"
            android:autofillHints=""
            tools:ignore="LabelFor"
            android:padding="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/priceLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/modelLayout"
        android:gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/addPriceText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/priceText"
            android:textSize="15sp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/addPrice"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:inputType="text"
            android:background="@color/white"
            android:autofillHints=""
            tools:ignore="LabelFor"
            android:padding="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addCarLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceLayout"
        android:gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">
        <Button
            android:id="@+id/addCarButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addCarText"
            android:textColor="@color/black"
            android:backgroundTint="#FF69B4" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/backButtonLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addCarLayout"
        android:gravity="center"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backButton"
            android:textColor="@color/black"
            android:backgroundTint="#FF69B4"/>
    </LinearLayout>
</RelativeLayout>